# aoc-std

./: .gitignore  Cargo.toml  README.md  justfile
aoc-collections/: Cargo.toml
aoc-collections/src/: bitset.rs  bucket_queue.rs  char_set.rs  grid.rs  int_vec.rs  lib.rs  point_grid.rs
aoc-conversions/: Cargo.toml
aoc-conversions/src/: chars.rs  lib.rs  strs.rs
aoc-directions/: Cargo.toml
aoc-directions/src/: lib.rs
aoc-geometry/: Cargo.toml
aoc-geometry/src/: bound.rs  cube.rs  intersect.rs  interval.rs  lib.rs  pascals_triangle.rs  point.rs  polygon.rs  rect.rs
aoc-math/: Cargo.toml
aoc-math/src/: lib.rs
aoc-pathing/: Cargo.toml
aoc-pathing/src/: astar.rs  dijkstra.rs  floyd_warshall.rs  lib.rs
aoc-std/: Cargo.toml
aoc-std/src/: lib.rs
aoc-types/: Cargo.toml
aoc-types/src/: chars.rs  lib.rs
aoc-vm/: Cargo.toml
aoc-vm/src/: lib.rs  register.rs  value.rs
benchmarking/: Cargo.toml
benchmarking/benches/: char_set.rs  int_vec.rs
ci/: pipeline.yaml  test.yaml  vars.yaml
ci/scripts/: lint-and-test.sh
