[workspace]

members = [
    # main crate
    "aoc-std",

    # support
    "aoc-collections",
    "aoc-conversions",
    "aoc-directions",
    "aoc-geometry",
    "aoc-pathing",
]

[workspace.package]
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2021"
publish = false

[workspace.dependencies]
num = "0.4"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
