[workspace]
resolver = "2"
members = [
    # main crate
    "aoc-std",

    # support
    "aoc-collections",
    "aoc-conversions",
    "aoc-directions",
    "aoc-geometry",
    "aoc-pathing",
    "aoc-types",
    "aoc-vm",
]

[workspace.package]
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2021"
publish = ["ancalagon"]
rust-version = "1.66.1"

[workspace.dependencies]
nom = "7.1"
num = "0.4"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.31"
