[workspace]
resolver = "2"
members = [
    # main crate
    "aoc-std",

    # support
    "aoc-collections",
    "aoc-conversions",
    "aoc-directions",
    "aoc-geometry",
    "aoc-math",
    "aoc-pathing",
    "aoc-types",
    "aoc-vm",

    # test-only
    "benchmarking",
]

[workspace.package]
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2021"
publish = ["ancalagon"]
rust-version = "1.82"

[workspace.dependencies]
nom = "7.1"
num = "0.4"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.3"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
