[package]
name = "aoc-collections"
version = "0.3.3"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-conversions = { path = "../aoc-conversions", version = "0.1", registry = "ancalagon" }
aoc-directions = { path = "../aoc-directions", version = "0.1", registry = "ancalagon" }
aoc-geometry = { path = "../aoc-geometry", version = "0.4", registry = "ancalagon" }
aoc-types = { path = "../aoc-types", version = "0.1.1", registry = "ancalagon" }
indexmap = "1.9.2"
nom = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
