[package]
name = "aoc-directions"
version = "0.1.3"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
