[package]
name = "aoc-geometry"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-directions = { path = "../aoc-directions", version = "0.1", registry = "ancalagon" }
num = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
