[package]
name = "aoc-pathing"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-collections = { path = "../aoc-collections" }
num = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
