[package]
name = "aoc-pathing"
version = "0.1.9"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-collections = { path = "../aoc-collections", version = "0.3.5", registry = "ancalagon" }
num = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
