[package]
name = "aoc-std"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-collections = { path = "../aoc-collections" }
aoc-conversions = { path = "../aoc-conversions" }
aoc-directions = { path = "../aoc-directions" }
aoc-geometry = { path = "../aoc-geometry" }
aoc-pathing = { path = "../aoc-pathing" }
