[package]
name = "aoc-std"
version = "0.3.2"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-collections = { path = "../aoc-collections", version = "0.2.1", registry = "ancalagon" }
aoc-conversions = { path = "../aoc-conversions", version = "0.1.2", registry = "ancalagon" }
aoc-directions = { path = "../aoc-directions", version = "0.1.3", registry = "ancalagon" }
aoc-geometry = { path = "../aoc-geometry", version = "0.2.0", registry = "ancalagon" }
aoc-pathing = { path = "../aoc-pathing", version = "0.1.2", registry = "ancalagon" }
aoc-types = { path = "../aoc-types", version = "0.1.1", registry = "ancalagon" }
aoc-vm = { path = "../aoc-vm", version = "0.1.1", registry = "ancalagon" }
