[package]
name = "aoc-types"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-conversions = { path = "../aoc-conversions", version = "0.2", registry = "ancalagon" }
thiserror = { workspace = true }
