[package]
name = "aoc-vm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-types = { path = "../aoc-types", version = "0.1", registry = "ancalagon" }
nom = { workspace = true }
thiserror = { workspace = true }
